[package]
name = "prometheus-license-exporter"
version = "1.5.5"
edition = "2021"
# https://doc.rust-lang.org/cargo/reference/manifest.html#the-rust-version-field
rust-version = "1.64.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
fern = "0.6.2"
getopts = "0.2.21"
lazy_static = "1.4.0"
log = "0.4.18"
prometheus = { version = "0.13.3", features = ["process"] }
quick-xml = "0.28.2"
regex = "1.8.3"
reqwest = { version = "0.11.18", features = ["blocking", "native-tls"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
simple-error = "0.3.0"
tiny_http = "0.12.0"
warp = "0.3.5"
